# survivor-predict

./: .env.template  .gitignore  README.md  pyproject.toml  survivor_predict.py
